force-app/main/default/objects/Liability_Judgement__c/Liability_Judgement__c.object-meta.xml
<CustomObject>
    <label>Judgment Party</label>
    <nameField>
        <displayFormat>LJ-{0}</displayFormat>
        <label>Judgment Party</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Judgment Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>