force-app/main/default/objects/Liability_Judgement__c/fields/EntityAccountId__c.field-meta.xml
<CustomField>
    <fullName>EntityAccountId__c</fullName>
    <formula>IF( NOT( ISBLANK(Liable_Party__c) ),  
Liable_Party__r.Entity__c, 
Related_Business__r.Business__c)</formula>
    <label>EntityAccountId</label>
    <type>Text</type>
</CustomField>