force-app/main/default/objects/Liability_Judgement__c/fields/Judgment_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Date__c</fullName>
    <formula>Judgement__r.Judgement_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Date</label>
    <type>Date</type>
</CustomField>