force-app/main/default/objects/Liability_Judgement__c/fields/Judgment_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Party_Type__c</fullName>
    <label>Judgment Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alter Ego</fullName>
            </value>
            <value>
                <fullName>Car Wash Successor (LC 2066)</fullName>
            </value>
            <value>
                <fullName>Equitable Successor</fullName>
            </value>
            <value>
                <fullName>FLC Successor (LC 1698.9)</fullName>
            </value>
            <value>
                <fullName>Garment Successor (LC 2684)</fullName>
            </value>
            <value>
                <fullName>Janitorial Successor (LC 1420)</fullName>
            </value>
            <value>
                <fullName>Judgment Successor (LC 200.3)</fullName>
            </value>
            <value>
                <fullName>Labor Code 238(e) Related Business</fullName>
            </value>
            <value>
                <fullName>Original Judgment Debtor</fullName>
                <default>true</default>
                <label>Original Judgment Debtor</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Port Trucking Successor (LC 2810.4)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>