force-app/main/default/objects/Liability_Judgement__c/fields/Liable_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Name__c</fullName>
    <formula>IF(ISBLANK(Liable_Party__c) ,  
IF(ISBLANK(Related_Business__r.Business__r.Name), Related_Business__r.Business__r.FirstName + ' '+Related_Business__r.Business__r.LastName, Related_Business__r.Business__r.Name),
IF(ISBLANK(Liable_Party__r.Entity__r.Name), Liable_Party__r.Entity__r.FirstName + ' '+Liable_Party__r.Entity__r.LastName, Liable_Party__r.Entity__r.Name) )</formula>
    <label>Liable Party Name</label>
    <type>Text</type>
</CustomField>