force-app/main/default/objects/Liability_Judgement__c/fields/Liable_Party_Related_Business__c.field-meta.xml
<CustomField>
    <fullName>Liable_Party_Related_Business__c</fullName>
    <formula>IF( NOT( ISBLANK(Liable_Party__c) ),  
HYPERLINK("/"&amp;Liable_Party__c, Liable_Party__r.Name), 
HYPERLINK("/"&amp;Related_Business__c, Related_Business__r.Name__c) )</formula>
    <label>Liable Party/Related Business</label>
    <type>Text</type>
</CustomField>