force-app/main/default/objects/Liability_Judgement__c/fields/ODA_Amount_for_Liable_Party__c.field-meta.xml
<CustomField>
    <fullName>ODA_Amount_for_Liable_Party__c</fullName>
    <description>Summarizes Wage Balance Due, Penalty Balance Due, and Interest Balance Due to determine the ODA Amount Due for the Liable Party related to a Liability Judgment.</description>
    <formula>( Wage_Balance_Due__c + Penalty_Balance_Due__c + Interest_Balance_Due__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ODA Amount for Liable Party</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>