force-app/main/default/objects/Liability_Judgement__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <description>Enter other reasons, why party was added to the judgement?</description>
    <inlineHelpText>Enter other reasons, why party was added to the judgement?</inlineHelpText>
    <label>Other Judgement Party Type</label>
    <type>TextArea</type>
</CustomField>