force-app/main/default/objects/Liability_Judgement__c/fields/Related_Business__c.field-meta.xml
<CustomField>
    <fullName>Related_Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Business</label>
    <referenceTo>Related_Businesses__c</referenceTo>
    <relationshipLabel>Judgment Parties</relationshipLabel>
    <relationshipName>Judgment_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>