force-app/main/default/objects/Liability_Judgement__c/fields/X2810_4_Date_Removed_from_the_list__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Date_Removed_from_the_list__c</fullName>
    <label>2810.4 Date Removed from the List</label>
    <type>Date</type>
</CustomField>