force-app/main/default/objects/Liability_Judgement__c/fields/X2810_4_List_Status__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_List_Status__c</fullName>
    <label>2810.4 List Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed-On List</fullName>
            </value>
            <value>
                <fullName>Confirmed-Off List</fullName>
            </value>
            <value>
                <fullName>Under Investigation/Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>