force-app/main/default/objects/Liability_Judgement__c/recordTypes/Liable_Party.recordType-meta.xml
<RecordType>
    <fullName>Liable_Party</fullName>
    <active>true</active>
    <label>Liable Party</label>
</RecordType>