force-app/main/default/objects/Liability_Judgement__c/recordTypes/Related_Business.recordType-meta.xml
<RecordType>
    <fullName>Related_Business</fullName>
    <active>true</active>
    <label>Related Business</label>
</RecordType>