force-app/main/default/objects/Liability_Judgement__c/validationRules/Required_Other_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Other_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Judgment_Party_Type__c, 'Other'),
      ISBLANK(Other_Reason__c))</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Enter other reasons, why party was added to the judgement?</errorMessage>
</ValidationRule>