force-app/main/default/objects/Liability_Judgement__c/validationRules/Validate_the_Other_Reason_Field_criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_the_Other_Reason_Field_criteria</fullName>
    <active>true</active>
    <description>This validation is used to verify the 'Other Reason' only valid if the 'Judgment Party Type' field value is selected as 'Other'.</description>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Judgment_Party_Type__c, 'Other')) ,   Other_Reason__c != null )</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>'Other Reason' only applicable if 'Judgment Party Type' is selected as 'Other'.</errorMessage>
</ValidationRule>